added saving and loading types with HDF5

--- a/devel/saveload.ipynb
+++ b/devel/saveload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,20 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "saveBonds (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function saveBonds(\n",
     "        bs :: Vector{B},\n",
@@ -81,25 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "loadBonds (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function loadBonds(\n",
+    "        ::Type{BI},\n",
     "        fn :: AbstractString,\n",
     "        group :: AbstractString = \"bonds\"\n",
-    "    )\n",
+    "    ) where {LBI,NI,BI<:Union{Bond{LBI,NI},Bond}}\n",
     "    \n",
     "    # read attribute data\n",
     "    attr_data = h5readattr(fn, group)\n",
@@ -129,25 +108,22 @@
     "    \n",
     "    # return nothing\n",
     "    return bs\n",
+    "end\n",
+    "\n",
+    "function loadBonds(\n",
+    "        fn :: AbstractString,\n",
+    "        group :: AbstractString = \"bonds\"\n",
+    "    )\n",
+    "    \n",
+    "    return loadBonds(Bond, fn, group)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "saveSites (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function saveSites(\n",
     "        ss :: Vector{S},\n",
@@ -192,25 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "loadSites (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function loadSites(\n",
+    "        ::Type{SI},\n",
     "        fn :: AbstractString,\n",
     "        group :: AbstractString = \"sites\"\n",
-    "    )\n",
+    "    ) where {LSI,DI,SI<:Union{Site{LSI,DI},Site}}\n",
     "    \n",
     "    # read attribute data\n",
     "    attr_data = h5readattr(fn, group)\n",
@@ -238,33 +204,22 @@
     "    \n",
     "    # return nothing\n",
     "    return ss\n",
+    "end\n",
+    "\n",
+    "function loadSites(\n",
+    "        fn :: AbstractString,\n",
+    "        group :: AbstractString = \"sites\"\n",
+    "    )\n",
+    "    \n",
+    "    return loadSites(Site, fn, group)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8-element Array{Bond{Symbol,0},1}:\n",
-       " Bond{Symbol,0} 1-->3 @(): :l\n",
-       " Bond{Symbol,0} 1-->2 @(): :l\n",
-       " Bond{Symbol,0} 2-->4 @(): :l\n",
-       " Bond{Symbol,0} 2-->1 @(): :l\n",
-       " Bond{Symbol,0} 3-->1 @(): :l\n",
-       " Bond{Symbol,0} 3-->4 @(): :l\n",
-       " Bond{Symbol,0} 4-->2 @(): :l\n",
-       " Bond{Symbol,0} 4-->3 @(): :l"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lt = getLatticeOpen(getUnitcellSquare(Symbol), 2)\n",
     "saveBonds(bonds(lt), \"test.h5\")\n",
@@ -273,51 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8-element Array{Bond{Symbol,0},1}:\n",
-       " Bond{Symbol,0} 1-->3 @(): :l\n",
-       " Bond{Symbol,0} 1-->2 @(): :l\n",
-       " Bond{Symbol,0} 2-->4 @(): :l\n",
-       " Bond{Symbol,0} 2-->1 @(): :l\n",
-       " Bond{Symbol,0} 3-->1 @(): :l\n",
-       " Bond{Symbol,0} 3-->4 @(): :l\n",
-       " Bond{Symbol,0} 4-->2 @(): :l\n",
-       " Bond{Symbol,0} 4-->3 @(): :l"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadBonds(\"test.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element Array{Site{Symbol,2},1}:\n",
-       " Site{Symbol,2} @[0.0, 0.0]: :l1       \n",
-       " Site{Symbol,2} @[0.433013, -0.25]: :l2\n",
-       " Site{Symbol,2} @[0.433013, 0.25]: :l3 "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "uc = getUnitcellKagome(Symbol)\n",
     "saveSites(sites(uc), \"test.h5\")\n",
@@ -326,23 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element Array{Site{Symbol,2},1}:\n",
-       " Site{Symbol,2} @[0.0, 0.0]: :l1       \n",
-       " Site{Symbol,2} @[0.433013, -0.25]: :l2\n",
-       " Site{Symbol,2} @[0.433013, 0.25]: :l3 "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadSites(\"test.h5\")"
    ]
@@ -356,20 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "saveUnitcell (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function saveUnitcell(\n",
     "        uc :: U,\n",
@@ -421,25 +318,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "loadUnitcell (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function loadUnitcell(\n",
+    "        ::Type{UC},\n",
     "        fn :: AbstractString,\n",
     "        group :: AbstractString = \"unitcell\"\n",
-    "    )\n",
+    "    ) where {SUC<:AbstractSite,BUC<:AbstractBond,UC<:Union{Unitcell{SUC,BUC}, Unitcell}}\n",
     "        \n",
     "    # read the attribute data\n",
     "    attr_data = h5readattr(fn, group)\n",
@@ -473,28 +360,22 @@
     "        site_list,\n",
     "        bond_list\n",
     "    )\n",
+    "end\n",
+    "\n",
+    "function loadUnitcell(\n",
+    "        fn :: AbstractString,\n",
+    "        group :: AbstractString = \"unitcell\"\n",
+    "    )\n",
+    "    \n",
+    "    return loadUnitcell(Unitcell, fn, group)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unitcell object\n",
-       "--> type Unitcell{Site{String,2},Bond{Int64,2}}\n",
-       "--> 2 sites of type Site{String,2}\n",
-       "--> 6 bonds of type Bond{Int64,2}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "uc = getUnitcellHoneycomb(String, Int64)\n",
     "saveUnitcell(uc, \"test.h5\")\n",
@@ -503,25 +384,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unitcell object\n",
-       "--> type Unitcell{Site{String,2},Bond{Int64,2}}\n",
-       "--> 2 sites of type Site{String,2}\n",
-       "--> 6 bonds of type Bond{Int64,2}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadUnitcell(\"test.h5\")"
    ]
@@ -535,20 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "saveLattice (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function saveLattice(\n",
     "        lt :: L,\n",
@@ -604,25 +460,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "loadLattice (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function loadLattice(\n",
+    "        ::Type{LT},\n",
     "        fn :: AbstractString,\n",
     "        group :: AbstractString = \"lattice\"\n",
-    "    )\n",
+    "    ) where {SLT<:AbstractSite,BLT<:AbstractBond,ULT<:AbstractUnitcell,LT<:Union{Lattice{SLT,BLT,ULT},Lattice}}\n",
     "    \n",
     "    # read the attribute data\n",
     "    attr_data = h5readattr(fn, group)\n",
@@ -661,29 +507,22 @@
     "        bond_list,\n",
     "        unitcell_loaded\n",
     "    )\n",
+    "end\n",
+    "\n",
+    "function loadLattice(\n",
+    "        fn :: AbstractString,\n",
+    "        group :: AbstractString = \"lattice\"\n",
+    "    )\n",
+    "    \n",
+    "    return loadLattice(Lattice, fn, group)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Lattice object\n",
-       "--> type Lattice{Site{Int64,3},Bond{Float64,0},Unitcell{Site{Int64,3},Bond{Float64,3}}}\n",
-       "--> 4000 sites of type Site{Int64,3}\n",
-       "--> 11400 bonds of type Bond{Float64,0}\n",
-       "--> unitcell of type Unitcell{Site{Int64,3},Bond{Float64,3}}"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "uc = getUnitcellHyperoctagon(Int64, Float64)\n",
     "lt = getLatticeOpen(uc, 10)\n",
@@ -693,36 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Lattice object\n",
-       "--> type Lattice{Site{Int64,3},Bond{Float64,0},Unitcell{Site{Int64,3},Bond{Float64,3}}}\n",
-       "--> 4000 sites of type Site{Int64,3}\n",
-       "--> 11400 bonds of type Bond{Float64,0}\n",
-       "--> unitcell of type Unitcell{Site{Int64,3},Bond{Float64,3}}"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadLattice(\"test.h5\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
